pkg/awsvpc/examples/out/analysis_out/actual.txt
Endpoint connectivity for VPC VpcId:41
<nothing to report>

Endpoint connectivity for VPC VpcId:5
InstanceId:18[10.240.2.4] => InstanceId:33[10.240.1.220] : protocol: UDP dst-ports: 443
InstanceId:18[10.240.2.4] => InstanceId:37[10.240.1.180] : protocol: UDP dst-ports: 443
InstanceId:22[10.240.3.161] => InstanceId:33[10.240.1.220] : protocol: ICMP,UDP
InstanceId:22[10.240.3.161] => InstanceId:33[10.240.1.220] : protocol: TCP * 
InstanceId:22[10.240.3.161] => InstanceId:37[10.240.1.180] : protocol: ICMP,UDP
InstanceId:22[10.240.3.161] => InstanceId:37[10.240.1.180] : protocol: TCP * 
InstanceId:22[10.240.3.161] => InstanceId:7[10.240.3.177] : All Connections
InstanceId:28[10.240.0.40] => InstanceId:33[10.240.1.220] : protocol: ICMP,UDP
InstanceId:28[10.240.0.40] => InstanceId:33[10.240.1.220] : protocol: TCP * 
InstanceId:28[10.240.0.40] => InstanceId:37[10.240.1.180] : protocol: ICMP,UDP
InstanceId:28[10.240.0.40] => InstanceId:37[10.240.1.180] : protocol: TCP * 
InstanceId:33[10.240.1.220] => InstanceId:37[10.240.1.180] : All Connections
InstanceId:37[10.240.1.180] => InstanceId:33[10.240.1.220] : All Connections
InstanceId:7[10.240.3.177] => InstanceId:22[10.240.3.161] : All Connections
InstanceId:7[10.240.3.177] => InstanceId:33[10.240.1.220] : protocol: ICMP,UDP
InstanceId:7[10.240.3.177] => InstanceId:33[10.240.1.220] : protocol: TCP * 
InstanceId:7[10.240.3.177] => InstanceId:37[10.240.1.180] : protocol: ICMP,UDP
InstanceId:7[10.240.3.177] => InstanceId:37[10.240.1.180] : protocol: TCP * 

TCP connections for which response is not permitted are marked with *
