pkg/awsvpc/examples/out/analysis_out/aws_acl_1_all_vpcs_subnetsBased_withPGW.txt
Subnet connectivity for VPC VpcId:41
SubnetId:45 => SubnetId:46 : All Connections
SubnetId:45 => SubnetId:47 : All Connections
SubnetId:46 => SubnetId:45 : All Connections
SubnetId:46 => SubnetId:47 : All Connections
SubnetId:47 => SubnetId:45 : All Connections
SubnetId:47 => SubnetId:46 : All Connections

Subnet connectivity for VPC VpcId:5
SubnetId:17 => SubnetId:6 : protocol: TCP dst-ports: 443 * 
SubnetId:27 => SubnetId:6 : protocol: ICMP,UDP
SubnetId:27 => SubnetId:6 : protocol: TCP * 
SubnetId:32 => SubnetId:17 : protocol: TCP dst-ports: 443 * 
SubnetId:32 => SubnetId:27 : protocol: ICMP,UDP
SubnetId:32 => SubnetId:27 : protocol: TCP * 
SubnetId:32 => SubnetId:6 : protocol: ICMP,UDP
SubnetId:32 => SubnetId:6 : protocol: TCP * 

TCP connections for which response is not permitted are marked with *
