pkg/awsvpc/examples/out/analysis_out/aws_sg_1_all_vpcs_.txt
Endpoint connectivity for VPC VpcId:43
<nothing to report>

Endpoint connectivity for VPC VpcId:5
InstanceId:18[10.240.20.141] => InstanceId:29[10.240.30.108] : protocol: TCP
InstanceId:24[10.240.20.131] => InstanceId:29[10.240.30.108] : protocol: TCP
InstanceId:37[10.240.10.122] => InstanceId:18[10.240.20.141] : protocol: TCP dst-ports: 9080
InstanceId:37[10.240.10.122] => InstanceId:24[10.240.20.131] : protocol: TCP dst-ports: 9080
InstanceId:37[10.240.10.122] => InstanceId:7[10.240.40.184] : All Connections
InstanceId:7[10.240.40.184] => InstanceId:29[10.240.30.108] : All Connections
InstanceId:7[10.240.40.184] => InstanceId:37[10.240.10.122] : All Connections
