pkg/awsvpc/examples/out/analysis_out/aws_sg_1_all_vpcs_subnetsBased_withPGW.txt
Subnet connectivity for VPC VpcId:43
SubnetId:45 => SubnetId:46 : All Connections
SubnetId:45 => SubnetId:47 : All Connections
SubnetId:46 => SubnetId:45 : All Connections
SubnetId:46 => SubnetId:47 : All Connections
SubnetId:47 => SubnetId:45 : All Connections
SubnetId:47 => SubnetId:46 : All Connections

Subnet connectivity for VPC VpcId:5
SubnetId:17 => SubnetId:28 : All Connections
SubnetId:17 => SubnetId:36 : All Connections
SubnetId:17 => SubnetId:6 : All Connections
SubnetId:28 => SubnetId:17 : All Connections
SubnetId:28 => SubnetId:36 : All Connections
SubnetId:28 => SubnetId:6 : All Connections
SubnetId:36 => SubnetId:17 : All Connections
SubnetId:36 => SubnetId:28 : All Connections
SubnetId:36 => SubnetId:6 : All Connections
SubnetId:6 => SubnetId:17 : All Connections
SubnetId:6 => SubnetId:28 : All Connections
SubnetId:6 => SubnetId:36 : All Connections
