pkg/awsvpc/examples/out/analysis_out/basic_config_with_sg_all_vpcs_.txt
Endpoint connectivity for VPC VpcId:22
<nothing to report>

Endpoint connectivity for VPC VpcId:5
InstanceId:18[10.0.20.81] => InstanceId:7[10.0.10.50] : All Connections
InstanceId:7[10.0.10.50] => InstanceId:18[10.0.20.81] : All Connections
InstanceId:7[10.0.10.50] => Public Internet (all ranges) : All Connections
Public Internet (all ranges) => InstanceId:7[10.0.10.50] : All Connections
