pkg/awsvpc/examples/out/analysis_out/basic_config_with_sg_all_vpcs_subnetsBased_withPGW.txt
Subnet connectivity for VPC VpcId:22
SubnetId:24 => SubnetId:25 : All Connections
SubnetId:24 => SubnetId:26 : All Connections
SubnetId:25 => SubnetId:24 : All Connections
SubnetId:25 => SubnetId:26 : All Connections
SubnetId:26 => SubnetId:24 : All Connections
SubnetId:26 => SubnetId:25 : All Connections

Subnet connectivity for VPC VpcId:5
SubnetId:17 => SubnetId:6 : All Connections
SubnetId:6 => SubnetId:17 : All Connections
